# history_cartopy

./: .gitignore  CLAUDE.md  LICENSE  README.md  attributions.md  motivation.md  pyproject.toml  todo.md
.claude/: settings.local.json
.claude/skills/essay-to-map/: SKILL.md
data/: city-locations.yaml
data/backgrounds/: images.json
data/borders/: README.md
data/polygons/: bijapur-1655.geojson  golconda-1650.geojson  golconda-1655.geojson  mughal-1650.geojson  ottoman-1650.geojson  ottoman-1651.geojson  persia-1650.geojson  safavid-persia-1650.geojson
docs/: placement-strategies.md
examples/__reference__/: manifest.yaml
examples/assam-campaign-1/: manifest.yaml
examples/assam-campaign-1/text/: extract.txt
examples/assam-campaign-2/: manifest.yaml
examples/assam-campaign-3/: manifest.yaml
examples/balkh-campaign-1647/: manifest.yaml
examples/example-reference/: manifest.yaml
examples/mughal-neighbours-1650/: manifest.yaml
examples/persia-india-1650/: essay.txt  manifest.yaml
examples/sack-of-hyderabad-1655/: manifest.yaml
examples/sack-of-hyderabad-1656/: manifest.yaml
examples/war-of-succession/: manifest.yaml  source.txt
examples/war-of-succession-1/: manifest.yaml
examples/war-of-succession-2/: manifest.yaml
scripts/: generate_placeholder_icons.py
src/history_cartopy/: __init__.py  anchor.py  border_styles.py  campaign_styles.py  campaigns.py  core.py  events.py  icons.py  labels.py  narrative.py  pairing.py  placement.py  render_map.py  river_alignment.py  river_search.py  stylemaps.py  styles.py  territories.py  territory_styles.py  themes.py  title_cartouche.py
tests/: generate_test_borders.py  manifest.yaml  test_anchor.py  test_campaign_geometry.py  test_placement.py
